<resources>
    <string name="app_name">Roommate Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_new_user">New user? Sign up here!</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_out">Log out</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_activity_abstract">AbstractActivity</string>


    <!-- Strings related to creating apartment -->
    <string name="title_activity_create_apartment">Create New Apartment</string>
    <string name="button_new_apartment">Create an Apartment</string>
    <string name="apartment_info">Please enter the following</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="street_1">Street 1</string>
    <string name="street_2">Street 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="button_create_apartment">Create Apartment</string>
    <string name="title_activity_invitation_code">Invite your apartment mates</string>
    <string name="title_activity_join_apartment">Join an apartment</string>
    <string name="title_activity_apartment">My apartment</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web Search</string>

    <string-array name="mpages">
        <item>wow</item>
        <item>dang</item>
        <item>bang</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="apt_fragment">My Apartment</string>

</resources>
