<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateApartmentActivity"
    tools:showIn="@layout/activity_create_apartment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="244dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/apartment_info"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal" />

        <EditText android:id="@+id/apartment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apartment_name"
            android:singleLine="true"
            android:minLines="1" />

        <EditText android:id="@+id/street_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street_1"
            android:singleLine="true"
            android:minLines="1" />


        <EditText android:id="@+id/street_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/street_2"
            android:singleLine="true"
            android:minLines="1" />

        <EditText android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/city"
            android:singleLine="true"
            android:minLines="1" />

        <EditText android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/state"
            android:singleLine="true"
            android:minLines="1" />

        <EditText android:id="@+id/zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/zip_code"
            android:singleLine="true"
            android:minLines="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create_apartment"
            android:id="@+id/button_create_create_apartment"
            android:layout_gravity="center_horizontal"
            android:onClick="createNewApartment"/>

    </LinearLayout>

</RelativeLayout>
